tests/invalid/for_enumerate_unpack_wrong_target_count/main.py
def run_case() -> None:
    for i, v, extra in enumerate([1, 2]):
        print(i + v + extra)

if __name__ == "__main__":
    run_case()
